<resources>
    <string name="app_name">Hala</string>
    <string name="sign_in_with_facebook">Sign_in_with_facebook</string>
    <string name="sign_up_in_with_phone"><![CDATA[Sign Up&In with Phone]]></string>
    <string name="cancel">Cancel</string>
    <string name="select_region">Select Region</string>
    <string name="region">Region</string>
    <string name="mobile_phone_numbe">Mobile Phone Number</string>
    <string name="sms_verification_code">SMS verification code</string>
    <string name="login">LOGIN</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="try_other_ways">Try other ways</string>
    <string name="quick_login_with">Quick login with</string>
    <string name="make_your_time_valueable_helpful"><![CDATA[Make your time valueable&helpful]]></string>
    <string name="start_certified">Start Certified</string>
    <string name="confirm">confirm</string>
    <string name="want_to_log_out">Want to log out？</string>
    <string name="reserve_done_wait_star_call_back">Reserve Done,Wait Star Call Back</string>
    <string name="hot_online_stars">Hot Online Stars</string>
    <string name="login_failed">login failed</string>
    <string name="agora_app_id" translatable="false">3ca9a2cd0d144c209c5ca85e3a7440e4</string>
    <string name="anchor_is_not_aviliable">the star is not online</string>
    <string name="online">Online</string>
    <string name="offlIine">Offline</string>
    <string name="charged_coins_per_min">Charged %1$s coins per Min</string>
    <string name="call_duration_10_mins">Call duration: %1$s m %2$s s</string>
    <string name="fee_100_coins">Fee: %1$s coins</string>
    <string name="facebook_app_id" translatable="false">306102296576531</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb306102296576531</string>
    <string name="policy">By clicking Sign up, you are indicating that you have read and agreed to the EULA and Privacy Policy</string>
    <string name="continue_user_rules">By continuing to use our app and services, you are agreeing to be bound by below terms and conditions</string>
    <string name="terms_of_use_and_eula_amp_privacy_policy"><u>Terms of Use and EULA</u> &amp; <u>Privacy Policy</u></string>
    <string name="save">Save</string>
    <string name="selected_tags">Selected tags</string>
    <string name="character">Character</string>
    <string name="report">Report</string>
    <string name="ok">OK</string>
    <string name="term_of_use">Term of Use</string>
    <string name="agree">AGREE</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Secret">secret</string>
    <string name="user_avtar">User Avtar</string>
    <string name="user_name">User Name</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="Aries">Aries</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Pisces</string>
    <string name="screenshot_optional">Screenshot(optional)</string>
    <string name="please_describe_your_feedback">Please describe your feedback...</string>
    <string name="Submit">Submit</string>
    <string name="select_tags">Select tags</string>
    <string name="to_be_star">To Be A Star</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="star_is_not_available_now_call_again_later_or_reserve_now">Star is not available now Call again later or Reserve Now</string>
    <string name="reservation_will_be_charged_1_min_coins_it_will_return_if_stars_don_t_call_back_within_24_hours">Reservation will be charged 1 min coins it will return if Stars don’t call back within 24 hours.</string>
    <string name="fill_in_username">fill in username</string>
    <string name="fill_in_phonenumber">fill in phone number</string>
    <string name="fill_in_height">fill in height</string>
    <string name="fill_in_weight">fill in weight</string>
    <string name="fill_in_zodiac">fill in zodiac</string>
    <string name="fill_in_country">fill in country</string>
    <string name="fill_in_city">fill in city</string>
    <string name="fill_in_instroction">fill in introduction</string>
    <string name="fill_in_tags">fill in tags</string>
    <string name="fill_in_bio">fill in Bio</string>
    <string name="instagram_link">instagram link</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="just_finish_a_call">Congratulations！Just finish a call</string>
    <string name="video_call">Video Call</string>
    <string name="call_her">Call Her</string>
    <string name="fill_in_your_personal_signature">Fill in your personal signature.</string>
    <string name="coins_min">Coins/min</string>
    <string name="bio">Bio</string>
    <string name="last_login">Last login</string>
    <string name="answer_rate">Answer rate</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="city">City</string>
    <string name="zodiac">Zodiac</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="star_tags">Star Tags</string>
    <string name="total_coins">Total coins</string>
    <string name="phone_number">Phone number</string>
    <string name="introduction">Introduction</string>
    <string name="tags">Tags</string>
    <string name="certified">Certified</string>
    <string name="coins">Coins</string>
    <string name="select_amount">Select amount</string>
    <string name="contact_us">Contact us ></string>
    <string name="wallet">Wallet</string>
    <string name="message">Message</string>
    <string name="hot">HOT</string>
    <string name="newnew">NEW</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="my_calls">My Calls</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="make_your_time_helpful_and_have_fun">Make your time helpful and have fun！</string>
    <string name="submit_success">submit succeed！</string>
    <string name="submit_fail">submit failed！</string>
    <string name="eula">EULA</string>
    <string name="private_policy">Privacy Policy</string>
    <string name="recharge">Recharge</string>
    <string name="my_income">My Income</string>
    <string name="cost">My Cost</string>
    <string name="country">Country</string>
    <string name="voice_cost">Voice/%1$s</string>
    <string name="video_cost">Video/%1$s</string>
    <string name="distance_km">距离%1$skm</string>
    <string name="many_mins_active"> · %1$s前活跃</string>
    <string name="follow">关注</string>
    <string name="score">评分</string>
    <string name="add_black">加入黑名单</string>
    <string name="suggest">男粉</string>
    <string name="invite_friends">邀请好友</string>
    <string name="chat_setting">聊天设置</string>
    <string name="beauty_setting">美颜设置</string>
    <string name="login_regist_more_fun">登录注册更精彩</string>
    <string name="input_phone_num">输入手机号</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="other_login_way">其他登录方式</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="please_enter_sms_code">请输入验证码</string>
    <string name="input_sms_code">输入验证码</string>
    <string name="count_down_sms">%1$s秒后可重新获取</string>
    <string name="next_step">下一步</string>
    <string name="enter">进入</string>
    <string name="mycoins">My Coins</string>
    <string name="self_info">个人信息</string>
    <string name="now_location">现居地</string>
    <string name="personal_signature">个性签名</string>
    <string name="ta_say">Ta说</string>
    <string name="coin_min">%1$s Pa币/分钟</string>
    <string name="date">号</string>
    <string name="choose_pay_way">选择支付方式</string>
    <string name="charge_and_gain">充%1$s得%2$s星币</string>
    <string name="luck_more">赠送%1$s星币</string>
    <string name="video_verify">视频认证</string>
    <string name="self_tag">个人标签</string>
    <string name="form_user_red_pocket">来自%1$s的红包</string>
    <string name="pocket_coin">%1$s金币</string>
    <string name="star_coin">%1$s星币</string>
    <string name="origin">原图</string>
    <string name="delta">Delta</string>
    <string name="electric">Electric</string>
    <string name="slowlived">Slowlived</string>
    <string name="tokyo">Tokyo</string>
    <string name="warm">Warm</string>
    <string name="ziran">自然</string>
    <string name="bailiang">白亮</string>
    <string name="danya">淡雅</string>
    <string name="fennen">粉嫩</string>
    <string name="qingxin">小清新</string>
    <string name="lengsediao">冷色调</string>
    <string name="nuansediao">暖色调</string>
    <string name="hongrun">红润</string>
    <string name="face_shape_4">自定义</string>
    <string name="face_shape_3_default">默认</string>
    <string name="face_shape_0_nvshen">女神</string>
    <string name="face_shape_1_wanghong">网红</string>
    <string name="face_shape_2_ziran">自然</string>
    <string name="beauty_box_skin_detect">精准美肤</string>
    <string name="beauty_box_skin_detect_close">精准美肤 关闭</string>
    <string name="beauty_box_skin_detect_open">精准美肤 开启</string>
    <string name="beauty_box_heavy_blur_fine">精细磨皮</string>
    <string name="beauty_box_heavy_blur_clear">清晰磨皮</string>
    <string name="beauty_box_heavy_blur_hazy">朦胧磨皮</string>
    <string name="beauty_box_heavy_blur_normal_text">当前为 清晰磨皮 模式</string>
    <string name="beauty_box_heavy_blur_double_text">当前为 朦胧磨皮 模式</string>
    <string name="beauty_box_blur_level">磨皮</string>
    <string name="beauty_box_color_level">美白</string>
    <string name="beauty_box_red_level">红润</string>
    <string name="beauty_box_eye_bright">亮眼</string>
    <string name="beauty_box_tooth_whiten">美牙</string>
    <string name="beauty_box_face_shape">脸型</string>
    <string name="beauty_box_eye_enlarge">大眼</string>
    <string name="beauty_box_cheek_thinning">瘦脸</string>
    <string name="beauty_box_cheek_v">V脸</string>
    <string name="beauty_box_cheek_narrow">窄脸</string>
    <string name="beauty_box_cheek_small">小脸</string>
    <string name="beauty_box_cheek_oval">鹅蛋脸</string>
    <string name="beauty_box_intensity_chin">下巴</string>
    <string name="beauty_box_intensity_forehead">额头</string>
    <string name="beauty_box_intensity_nose">瘦鼻</string>
    <string name="beauty_box_intensity_mouth">嘴型</string>
    <string name="beauty_radio_skin_beauty">美肤</string>
    <string name="beauty_radio_face_shape">美型</string>
    <string name="beauty_radio_beauty_filter">美颜滤镜</string>
    <string name="beauty_radio_filter">滤镜</string>
    <string name="beauty_radio_beauty">质感美颜</string>
    <string name="makeup_radio_lipstick">口红</string>
    <string name="makeup_radio_blusher">腮红</string>
    <string name="makeup_radio_eyebrow">眉毛</string>
    <string name="makeup_radio_eye_shadow">眼影</string>
    <string name="makeup_radio_eye_liner">眼线</string>
    <string name="makeup_radio_eyelash">睫毛</string>
    <string name="makeup_radio_contact_lens">美瞳</string>
    <string name="makeup_radio_foundation">粉底</string>
    <string name="makeup_radio_highlight">高光</string>
    <string name="makeup_radio_shadow">阴影</string>
    <string name="makeup_radio_remove">卸妆</string>
    <string name="makeup_customize">自定义</string>
    <string name="makeup_freckles">雀斑妆</string>
    <string name="makeup_punk">朋克妆</string>
    <string name="makeup_peach_blossom">桃花</string>
    <string name="makeup_red_tea">赤茶妆</string>
    <string name="makeup_winter">冬日妆</string>
    <string name="makeup_boyfriend">男友</string>
    <string name="makeup_cream">奶油妆</string>
</resources>