<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="chat.hala.hala.activity.EditProAnchorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/include_top_toolbar_save" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_pic"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:paddingStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F4F4"
            tools:layout_height="106dp"/>

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_username"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_phone_num"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_phone_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_phonenumber"
                android:inputType="number"
                android:maxLength="15"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_height"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView

                android:id="@+id/et_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_height"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_weight"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView

                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_weight"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp"
           />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_zodiac"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/zodiac"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/et_zodiac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_zodiac"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_city"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_city"
                android:paddingEnd="10dp"

                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>
        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />
        <LinearLayout
            android:id="@+id/ll_country"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_country"
                android:paddingEnd="10dp"

                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_introction"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/introduction"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText

                android:id="@+id/et_introction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_instroction"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_tags"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/tags"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:lines="1"
                android:id="@+id/et_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_tags"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp"
                 />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_bio"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/bio"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/et_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="70dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/fill_in_bio"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp"
                 />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>

        <include
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_certified"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                android:text="@string/certified"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:hint="@string/instagram_link"

                android:id="@+id/et_certified"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColorHint="#C7C7CE"
                android:textSize="15sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next_10" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>